testsuite/tests/partial-sigs/should_fail/WildcardInDeriving.stderr

WildcardInDeriving.hs:5:22: error: [GHC-65507]
    Wildcard ‘_’ not allowed
      in the data type declaration for ‘Foo’
